objects/USA_Account_Pending_Tasks__c.object
<CustomObject>
    <fields>
        <fullName>USA_Account_Details__c</fullName>
        <formula>USA_Account__r.BillingStreet &amp; BR() &amp;  USA_Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Pending Tasks</relationshipLabel>
        <relationshipName>Account_Pending_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Chain_Name__c</fullName>
        <label>Chain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Distributor__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Email_Tree__c</fullName>
        <formula>Owner:User.Email &amp; &quot; -&gt; &quot; &amp; IF(ISBLANK(Owner:User.Manager.Email),&quot;&quot;, Owner:User.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Tree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Management_Level__c</fullName>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &apos; &apos; &amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Pending_Tasks__c</fullName>
        <label>Pending Tasks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Points__c</fullName>
        <label>Points</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Premise__c</fullName>
        <label>Premise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Team__c</fullName>
        <formula>CONTAINS(USA_Email_Tree__c, $User.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Pending Tasks</label>
    <nameField>
        <label>Account Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Pending Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>